# apps/backend/src/automations/automation-steps/dto/update-step.dto.ts
@@ -1,0 +1,3 @@
+export class UpdateStepDto {
+  // TODO: Define the properties needed for updating a step.
+}
